# playground

./: .gitignore  AGENT_BREADCRUMB.md  CLAUDE.md  HACKING.md  HELLO_AFK.md  Makefile  README  README.md  client.py  observability.py  pyproject.toml
.afk-smoke/: 20260508T193720Z-c4a4ffd7.txt  20260508T193734Z-d53b9c76.txt  20260508T210322Z-f1bc16c9.txt  20260508T212413Z-c79a655f.txt  20260508T212426Z-12107525.txt  20260508T223259Z-5ed9224c.txt  20260508T223739Z-40626209.txt  20260508T224406Z-91c49475.txt  20260508T224913Z-28a9da1b.txt  20260508T225111Z-bcee06b5.txt  20260508T225243Z-86ea696d.txt  20260508T230002Z-a63aec99.txt  20260508T230112Z-6f615831.txt  20260508T230724Z-71695645.txt  20260508T231334Z-b6f5593b.txt  20260508T231515Z-b08dd609.txt  20260508T231557Z-d814bc86.txt  20260508T231641Z-f5447421.txt  20260508T232100Z-18365365.txt  20260508T233423Z-a64a6981.txt  20260508T233804Z-3f691738.txt  20260508T234534Z-627092fd.txt  20260508T235557Z-36535e7f.txt  20260508T235929Z-afddca29.txt  20260509T000020Z-e35ba54d.txt  20260509T004008Z-78027afc.txt  20260509T004951Z-696a02b5.txt  20260509T005104Z-888df030.txt  20260509T010827Z-1b7dd216.txt  20260509T012941Z-399c9362.txt  20260509T123612Z-bb77003c.txt  20260509T130017Z-4353a8bc.txt  20260509T132619Z-5e123e99.txt  20260509T133740Z-a4af1698.txt  20260509T133927Z-7ba22001.txt  20260509T134146Z-1c409438.txt  20260509T134230Z-80257602.txt  20260509T134641Z-4ea425d6.txt  20260509T134714Z-b78a55bd.txt  20260509T135032Z-f5344dfb.txt  (+30 more)
agent_trace_debugger/: README.md  agent.py  improvements.md  instrumentation.py  main.py  (+4 more)
(+82 files in other folders)
